fixed color of selectr options when in dark mode

--- a/src/styl/imports/selectr-theme.styl
+++ b/src/styl/imports/selectr-theme.styl
@@ -8,6 +8,7 @@
 
 .selectr-options
 	overflow-y auto
+	color #000
 
 .selectr-options-container
 	border-radius 0px
